--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,12 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.8.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "ollama": "^0.5.14",
+    "node-cache": "^5.1.2",
     "openai": "^4.86.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
